tests/errors/unused-binding/main.pa
def main = fun {
	let unused = 5
	print "hello"
}
